@@ -2095,7 +2095,7 @@ c_value_of_variable (struct varobj *var)
 	    if (VALUE_LAZY (var->value))
 	      gdb_value_fetch_lazy (var->value);
 	    val_print (value_type (var->value),
-		       VALUE_CONTENTS_RAW (var->value), 0,
+		       value_contents_raw (var->value), 0,
 		       VALUE_ADDRESS (var->value), stb,
 		       format_code[(int) var->format], 1, 0, 0);
 	    thevalue = ui_file_xstrdup (stb, &dummy);
