@@ -1,3 +1,13 @@
+2005-02-01  Andrew Cagney  <cagney@gnu.org>
+
+	* value.c (value_contents_all_raw)
+	(value_contents_raw): New functions.
+	* value.h (VALUE_CONTENTS_ALL_RAW, VALUE_CONTENTS_RAW): Delete.
+	(value_contents_raw, value_contents_all_raw): Declare functions.
+	(VALUE_CONTENTS, VALUE_CONTENTS_ALL): Update.
+	* std-regs.c, valarith.c, valops.c, eval.c: Update.
+	* tracepoint.c, findvar.c: Update.
+
 2005-02-01  Orjan Friberg  <orjanf@axis.com>
 
 	* regformats/reg-cris.dat: New file with register definitions for CRIS.
